feat(be): Platzhalter-Gruppen mit Kochdienst-Tokens