@@ -3,6 +3,7 @@ package at.kigruapp.resource;
 import at.kigruapp.entity.FieldDefinition;
 import at.kigruapp.entity.MailJob;
 import at.kigruapp.entity.MailTemplate;
+import at.kigruapp.service.CookingDutyTokens;
 import io.quarkus.panache.common.Sort;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
@@ -12,6 +13,7 @@ import org.owasp.html.HtmlPolicyBuilder;
 import org.owasp.html.PolicyFactory;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -53,16 +55,35 @@ public class MailTemplateResource {
         return HTML_POLICY.sanitize(bodyHtml).replaceAll("<!--\\s*-->", "");
     }
 
-    public record PlaceholderTile(String token, String fieldName, Map<String, String> label) {}
+    private static final Set<String> COOKING_PERSON_FIELD_ALLOWLIST = Set.of("firstName", "lastName");
+
+    private static final String GROUP_PERSON = "PERSON";
+    private static final String GROUP_PERSON_LABEL = "Person";
+
+    public record PlaceholderTile(String token, String fieldName, Map<String, String> label,
+                                  String group, String groupLabel) {}
 
     @GET
     @Path("/placeholders")
-    public List<PlaceholderTile> placeholders() {
-        return FieldDefinition.findActive().stream()
-                .filter(def -> SCALAR_PERSON_FIELD_ALLOWLIST.contains(def.fieldName))
-                .map(def -> new PlaceholderTile("{{person." + def.fieldName + "}}", def.fieldName, def.label))
+    public List<PlaceholderTile> placeholders(@QueryParam("kind") String kind) {
+        boolean cooking = MailTemplate.KIND_COOKING.equals(kind);
+        List<PlaceholderTile> tiles = new ArrayList<>();
+        if (cooking) {
+            for (CookingDutyTokens.Token token : CookingDutyTokens.TOKENS) {
+                tiles.add(new PlaceholderTile(
+                        "{{duty." + token.fieldName() + "}}", token.fieldName(),
+                        Map.of("de", token.label()),
+                        CookingDutyTokens.GROUP, CookingDutyTokens.GROUP_LABEL));
+            }
+        }
+        Set<String> personFields = cooking ? COOKING_PERSON_FIELD_ALLOWLIST : SCALAR_PERSON_FIELD_ALLOWLIST;
+        tiles.addAll(FieldDefinition.findActive().stream()
+                .filter(def -> personFields.contains(def.fieldName))
+                .map(def -> new PlaceholderTile("{{person." + def.fieldName + "}}", def.fieldName, def.label,
+                        GROUP_PERSON, GROUP_PERSON_LABEL))
                 .sorted(Comparator.comparing(t -> labelSortKey(t.label())))
-                .collect(Collectors.toList());
+                .toList());
+        return tiles;
     }
 
     private String labelSortKey(Map<String, String> label) {
